# MSLogger

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  ms_logger.cpp  ms_logger.h
tests/: CMakeLists.txt  constructor_mt.test.cpp  constructor_st.test.cpp  pointers_mt.test.cpp  pointers_st.test.cpp  stdout_mt.test.cpp  stdout_st.test.cpp
